GNOME Bugzilla – Bug 759000
Fix typos in API documentation
Last modified: 2015-12-04 09:51:58 UTC
.
Created attachment 316730 [details] [review] Fix typos in API documentation In this context "its" is an article, not a subject followed by a verb, so "its", not "it's". Bob the Angry Flower fixed them all.
Review of attachment 316730 [details] [review]: +1
Attachment 316730 [details] pushed as 4440a13 - Fix typos in API documentation