Fix typos in API documentation

In this context "its" is an article, not a subject followed by a verb,
so "its", not "it's". Bob the Angry Flower fixed them all.

https://bugzilla.gnome.org/show_bug.cgi?id=759000